[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/games.kivano.editor/contents/ScriptTabs/ScriptTabs.gd" type="Script" id=1]
[ext_resource path="res://addons/games.kivano.editor/assets/white.png" type="Texture" id=2]
[ext_resource path="res://addons/games.kivano.editor/contents/ScriptTabs/Tabs/Tabs.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]

resource_name = "default"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "fade_out_and_in"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 2, 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "default"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.196078 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "fadein"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.196078 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "fadeout"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 0 ) ]
}

[node name="ScriptTabs" type="Control"]

visible = false
self_modulate = Color( 0.196045, 0.231323, 0.30957, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 23 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="TextureRect" type="TextureRect" parent="."]

visible = false
modulate = Color( 1, 1, 1, 0.539294 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin", "Visibility" ]

[node name="Tabs" parent="." instance=ExtResource( 3 )]

margin_bottom = 0.0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Mouse", "Theme", "custom_styles" ]

[node name="Animator" type="AnimationPlayer" parent="Tabs"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/default = SubResource( 1 )
anims/fade_out_and_in = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="activeIndicator" type="NinePatchRect" parent="."]

modulate = Color( 1, 1, 1, 0.196078 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
_sections_unfolded = [ "Margin", "Rect", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="activeIndicator"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/default = SubResource( 3 )
anims/fadein = SubResource( 4 )
anims/fadeout = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="indicatorMoveTweener" type="Tween" parent="."]

playback_process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="resizeTweener" type="Tween" parent="."]

playback_process_mode = 0
playback/active = false
playback/repeat = false
playback/speed = 1.0


